# managed

./: .gitignore  .pre-commit-config.yaml  LICENSE_HEADER.txt  README.md  cspell.config.yaml  pyproject.toml
managed/: __init__.py  _annotations.py  _providers.py  _registry.py  _runtime_typing.py  _utils.py  errors.py
tests/: test_annotations.py  test_providers.py  test_registry.py  test_runtime_typing.py
tests/fixtures/: __init__.py  collection_dep.py  ctor_dep.py  dataclass_dep.py  generic_dep.py  simple_app.py
